--- a/imgui.ini
+++ b/imgui.ini
@@ -3,10 +3,34 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=937,145
+Size=852,746
 
 [Window][Hello, world!]
+Pos=123,306
+Size=709,481
+
+[Window][Another Window]
 Pos=60,60
-Size=435,214
+Size=254,85
+
+[Window][Red Book World Manager]
+Pos=60,60
+Size=689,647
+
+[Window][d]
+Pos=60,60
+Size=40,42
+
+[Window][My Fixed Window]
+Pos=158,220
+Size=40,42
+
+[Window][Info Panel]
+Pos=0,0
+Size=1920,991
+
+[Window][Main Panel]
+Pos=0,0
+Size=1920,991
 
