--- a/RedBook.vcxproj.filters
+++ b/RedBook.vcxproj.filters
@@ -1,27 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="RedBook.cpp" />
     <ClCompile Include="external\imgui\imgui.cpp">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClCompile>
     <ClCompile Include="external\imgui\imgui_demo.cpp">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClCompile>
     <ClCompile Include="external\imgui\imgui_draw.cpp">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClCompile>
     <ClCompile Include="external\imgui\backends\imgui_impl_glfw.cpp">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClCompile>
     <ClCompile Include="external\imgui\backends\imgui_impl_opengl3.cpp">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClCompile>
     <ClCompile Include="external\imgui\imgui_tables.cpp">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClCompile>
     <ClCompile Include="external\imgui\imgui_widgets.cpp">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClCompile>
     <ClCompile Include="Perlin.cpp">
       <Filter>Utilities\Source</Filter>
@@ -59,34 +58,49 @@
     <ClCompile Include="WorldMap.cpp">
       <Filter>UserInterface\Source</Filter>
     </ClCompile>
+    <ClCompile Include="Switches.cpp">
+      <Filter>Utilities\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="RedBook.cpp">
+      <Filter>UserInterface\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="external\glad\src\glad.c">
+      <Filter>external</Filter>
+    </ClCompile>
+    <ClCompile Include="OutlineRendering.cpp">
+      <Filter>UserInterface\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderUtils.cpp">
+      <Filter>UserInterface\Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="external\imgui\imconfig.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="external\imgui\imgui.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="external\imgui\backends\imgui_impl_glfw.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="external\imgui\backends\imgui_impl_opengl3.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="external\imgui\backends\imgui_impl_opengl3_loader.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="external\imgui\imgui_internal.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="external\imgui\imstb_rectpack.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="external\imgui\imstb_textedit.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="external\imgui\imstb_truetype.h">
-      <Filter>imgui</Filter>
+      <Filter>external</Filter>
     </ClInclude>
     <ClInclude Include="Switches.h">
       <Filter>Utilities\Headers</Filter>
@@ -136,11 +150,20 @@
     <ClInclude Include="WorldMap.h">
       <Filter>UserInterface\Headers</Filter>
     </ClInclude>
+    <ClInclude Include="RedBook.h">
+      <Filter>UserInterface\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="RedBookGlobal.h">
+      <Filter>Utilities\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="OutlineRendering.h">
+      <Filter>UserInterface\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderUtils.h">
+      <Filter>UserInterface\Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="imgui">
-      <UniqueIdentifier>{7153d13d-b113-4a83-b6f9-cc467bd1eec5}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Utilities">
       <UniqueIdentifier>{03a4424a-aa7e-4ed2-9a52-14d2537ae93e}</UniqueIdentifier>
     </Filter>
@@ -185,6 +208,9 @@
     </Filter>
     <Filter Include="UserInterface\Headers">
       <UniqueIdentifier>{ce5d54dd-f434-457c-a62d-34592a508d10}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="external">
+      <UniqueIdentifier>{7153d13d-b113-4a83-b6f9-cc467bd1eec5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
