Many experiments on how to efficiently perform the Fluid Solve

--- a/HydrologySolver/HydrologySolver.vcxproj
+++ b/HydrologySolver/HydrologySolver.vcxproj
@@ -44,6 +44,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <UseInteloneMKL>Parallel</UseInteloneMKL>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
@@ -51,6 +52,7 @@
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <UseInteloneMKL>Parallel</UseInteloneMKL>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -137,12 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CSRMatrix.h" />
     <ClInclude Include="DataPointer.h" />
+    <ClInclude Include="Matrix.h" />
+    <ClInclude Include="MatrixOps.h" />
+    <ClInclude Include="MultigridMesh.h" />
+    <ClInclude Include="SolverDataOld.h" />
     <ClInclude Include="SolverData.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="DataPointer.cpp" />
-    <ClCompile Include="SolverData.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
